--- a/todo.txt
+++ b/todo.txt
@@ -5,19 +5,16 @@ DONE
 - time
 - save high score
 - bgm
+- perfect effect, sound
 
 DO
-- perfect effect (dunk)
-
 - select ball
 - apply selected balls
 
 UI:
 - pause
-- move basket
 - select ball
+- move basket
 
 Sound:
 - select ball
-- score
-- perfect dunk
